# AF-e---llm_conversation

./: .gitignore  LOGBOOK.md  pyproject.toml  test_run.py
scripts/: generate_schema.py
