[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llm-conversation"
description = "Tool to make LLM agents play characters and have conversations with each other."
authors = [{ name = "Famiu Haque", email = "famiuhaque@proton.me" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [
    "llm",
    "conversation",
    "ai",
    "agent",
    "chat",
    "prompt",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "rich (>=13.9.4,<14.0.0)",
    "prompt_toolkit (>=3.0.50,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "partial-json-parser (>=0.2.1.1.post5,<0.3.0.0)",
    "coloraide>=5.0,<6.0",
]
license-files = ["LICENSE"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/famiu/llm_conversation"
Repository = "https://github.com/famiu/llm_conversation"
Documentation = "https://github.com/famiu/llm_conversation/blob/main/README.md"
Issues = "https://github.com/famiu/llm_conversation/issues"

[project.scripts]
llm-conversation = "llm_conversation:main"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0,<2",
    "ruff>=0.9.4,<0.10",
    "ty>=0.0.1a17,<1.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src/llm_conversation", "schema.json"]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src/llm_conversation", "schema.json"]
sources = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # PEP8 (Errors)
    "E",
    # PEP8 (Warnings)
    "W",
    # Pyflakes
    "F",
    # Import order
    "I",
    # Docstring conventions
    "D",
    # Naming conventions
    "N",
    # Simplifications
    "SIM",
    # Upgrade syntax
    "UP"
]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src", "scripts"]

[tool.pyright]
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
reportAny = false
reportExplicitAny = false
